[gd_scene load_steps=17 format=3 uid="uid://cnrxwm0ehctws"]

[ext_resource type="Script" uid="uid://b8qxblb1c8uli" path="res://main.gd" id="1_a8y0u"]
[ext_resource type="Script" uid="uid://bgfl6bekgeyum" path="res://hand.gd" id="2_jkv2x"]
[ext_resource type="Texture2D" uid="uid://bjihxbdnjy7km" path="res://assets/pedecarta1.svg" id="3_jbj1t"]
[ext_resource type="Texture2D" uid="uid://cohtegebhroe6" path="res://assets/idle1.svg" id="4_muem4"]
[ext_resource type="Texture2D" uid="uid://ir6iprjvix1k" path="res://assets/idle2.svg" id="5_dp3eg"]
[ext_resource type="Texture2D" uid="uid://cp1f5jxg87xox" path="res://assets/pedecarta2.svg" id="6_0ld40"]
[ext_resource type="Texture2D" uid="uid://d10nmm2y35ctd" path="res://assets/pedecarta3.svg" id="7_gqmmt"]
[ext_resource type="Texture2D" uid="uid://diyr7djxxsthm" path="res://assets/pedecarta4.svg" id="8_yc10j"]
[ext_resource type="Script" uid="uid://dwwp1b3jwbstx" path="res://enemy_hand.gd" id="9_jscy8"]
[ext_resource type="Script" uid="uid://bq4edt0fekpbu" path="res://card_manager.gd" id="10_pm3ni"]
[ext_resource type="PackedScene" uid="uid://cy8xx5j57cnat" path="res://scenes/card_slot.tscn" id="11_y6deb"]
[ext_resource type="Script" uid="uid://dle21pluqrya7" path="res://deck.gd" id="12_og1vs"]
[ext_resource type="Texture2D" uid="uid://bu2wm770iir2h" path="res://assets/baralho.svg" id="13_2wyq8"]
[ext_resource type="Script" uid="uid://0rbk8pr45wec" path="res://input_manager.gd" id="14_vxglm"]

[sub_resource type="SpriteFrames" id="SpriteFrames_vivmo"]
animations = [{
"frames": [{
"duration": 2.0,
"texture": ExtResource("3_jbj1t")
}, {
"duration": 2.0,
"texture": ExtResource("4_muem4")
}, {
"duration": 2.0,
"texture": ExtResource("5_dp3eg")
}, {
"duration": 1.0,
"texture": ExtResource("4_muem4")
}, {
"duration": 1.0,
"texture": ExtResource("3_jbj1t")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 0.5,
"texture": ExtResource("6_0ld40")
}, {
"duration": 0.5,
"texture": ExtResource("7_gqmmt")
}, {
"duration": 0.5,
"texture": ExtResource("8_yc10j")
}, {
"duration": 0.5,
"texture": ExtResource("7_gqmmt")
}, {
"duration": 0.5,
"texture": ExtResource("6_0ld40")
}, {
"duration": 0.5,
"texture": ExtResource("3_jbj1t")
}],
"loop": true,
"name": &"pede_carta",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lquwl"]
size = Vector2(39.4155, 69.4614)

[node name="Main" type="Node2D"]
script = ExtResource("1_a8y0u")

[node name="Timer" type="Timer" parent="."]

[node name="hand" type="Node2D" parent="."]
visible = false
script = ExtResource("2_jkv2x")

[node name="jogador_texto" type="RichTextLabel" parent="."]
light_mask = 0
texture_filter = 1
offset_left = 184.0
offset_top = 817.0
offset_right = 346.0
offset_bottom = 857.0
scale = Vector2(4, 4.16)
bbcode_enabled = true
fit_content = true
autowrap_mode = 0
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
z_index = -10
position = Vector2(960, 523)
scale = Vector2(0.584016, 0.584016)
sprite_frames = SubResource("SpriteFrames_vivmo")
animation = &"pede_carta"
autoplay = "idle"
frame_progress = 0.876106

[node name="enemy_hand" type="Node2D" parent="."]
script = ExtResource("9_jscy8")

[node name="card-manager" type="Node2D" parent="."]
script = ExtResource("10_pm3ni")

[node name="card_slot16" parent="." instance=ExtResource("11_y6deb")]
visible = false
position = Vector2(998, 713)
scale = Vector2(1.31088, 1.68916)

[node name="deck" type="Node2D" parent="."]
position = Vector2(1341, 915)
rotation = -0.958186
scale = Vector2(1.32912, 1.29982)
script = ExtResource("12_og1vs")

[node name="Sprite2D" type="Sprite2D" parent="deck"]
position = Vector2(30.3576, -82.9386)
rotation = 0.934077
scale = Vector2(0.447027, 0.447027)
texture = ExtResource("13_2wyq8")

[node name="Area2D" type="Area2D" parent="deck"]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="deck/Area2D"]
position = Vector2(30.5388, -84.4871)
rotation = -0.610044
shape = SubResource("RectangleShape2D_lquwl")

[node name="input_manager" type="Node2D" parent="."]
script = ExtResource("14_vxglm")

[node name="inimigo_texto" type="RichTextLabel" parent="."]
texture_filter = 1
offset_left = 185.0
offset_top = 585.0
offset_right = 347.0
offset_bottom = 625.0
scale = Vector2(4, 4.16)
bbcode_enabled = true
fit_content = true
autowrap_mode = 0
horizontal_alignment = 1
vertical_alignment = 1

[node name="endGameUI" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="playAgain" type="Button" parent="endGameUI"]
layout_mode = 0
offset_left = 804.0
offset_top = 472.0
offset_right = 1168.0
offset_bottom = 595.0
text = "Jogar Novamente"

[node name="returnToMenu" type="Button" parent="endGameUI"]
layout_mode = 0
offset_left = 807.0
offset_top = 642.0
offset_right = 1169.0
offset_bottom = 764.0
text = "Voltar ao Menu"

[connection signal="pressed" from="endGameUI/playAgain" to="." method="_on_play_again_pressed"]
[connection signal="pressed" from="endGameUI/returnToMenu" to="." method="_on_return_to_menu_pressed"]
